fix: add z-index back because it is not on top

--- a/custom/panel_templates/Default/assets/css/custom.css
+++ b/custom/panel_templates/Default/assets/css/custom.css
@@ -311,6 +311,10 @@ body {
 
 /* --------------- Sidebar --------------- */
 
+.sidebar {
+    z-index: 999;
+}
+
 @media (min-width: 768px) {
     .sidebar {
         width: 17rem !important;
